--- a/fixme.dtx
+++ b/fixme.dtx
@@ -256,10 +256,10 @@
 %
 % \DescribeOption{status}
 % By default, \fixme is in \texttt{final} mode (\LaTeX{} itself behaves that
-% way). If you plan to use a document status specific to \fixme (as opposed to
-% the whole document), then the preferred way to do this is to use the
-% \texttt{status} option, and give it the value \texttt{final} or
-% \texttt{draft}.
+% way). If you're manipulating the document status at the level of \fixme
+% itself (as opposed to the \cs{documentclass} level), then the preferred way
+% to do this is to use the \texttt{status} option, and give it the value
+% \texttt{final} or \texttt{draft}.
 %
 % \subsection{Controlling the layout of \fixme notes\label{sec:manual:layout}}
 % \fixme notes can appear in several forms in your document. Each of these
