--- a/fixme.dtx
+++ b/fixme.dtx
@@ -272,10 +272,10 @@
 % section describes the built-in layout forms and their possible combination.
 %
 % \subsubsection{Built-in layout forms}
-% The layout forms currently supported are: inline (directly in the text),
-% marginal notes (the default), footnotes, index entries and marginal clues.
-% While most of these forms should be self-explanatory, marginal clues deserve
-% a bit more explanation.
+% The layout forms built in the core of \fixme are: inline (directly in the
+% text, in bold), marginal notes (the default), footnotes, index entries and
+% marginal clues. While most of these forms should be self-explanatory,
+% marginal clues deserve a bit more explanation.
 %
 % If your preferred layout form is inline or say, footnote, it might be
 % somewhat difficult to localize the \fixme note on the page, especially its
